--- a/docs/DevOps/Prometheus/10.主机监控指标.md
+++ b/docs/DevOps/Prometheus/10.主机监控指标.md
@@ -145,5 +145,6 @@ node_network_transmit_bytes_total  #上传流量总字节数
 
 ## 结语
 
-主机监控是监控平面中最底层的一类，虽然基础但是非常重要，只有在主机层面稳定了，上层应用才能更好的运行。本文讲解的内容只是主机监控中的基本指标，node-exporter自身还提供不少有用的指标，包括支持textfile的自定义指标。
+主机监控是监控平面中最底层的一类，虽然基础但是非常重要，只有在主机层面稳定了，上层应用才能更好的运行。
+本文讲解的内容只是主机监控中的基本指标，node-exporter自身还提供不少有用的指标，包括支持textfile的自定义指标。
 在生产环境中，需要根据实际情况进行调试。
