--- a/docs/杂记/2019-01-推荐网站.md
+++ b/docs/杂记/2019-01-推荐网站.md
@@ -1,5 +1,57 @@
+## remote work
+* https://hiring.cafe/
+* https://www.seek.co.nz/
+* https://www.linkedin.com/jobs/
+
+
 [小鹅通](https://www.xiaoe-tech.com/) 专注内容付费的技术服务商。
 [netlify](https://www.netlify.com/)  快速的根据你的静态文件生成一个带https和域名的网站。教程见[这篇](https://www.cnblogs.com/codernie/p/9062104.html)
 [dzone](https://dzone.com/)  可以学到一些DevOps相关的教程和工具的国外网站
 [pandownload](http://pandownload.com/index.html) 百度网盘提速软件
 [宜搭](https://yida.alibaba-inc.com/home/) 阿里出的快速搭建应用平台。
+
+*   [一个提供pojie软件的国外网站](https://crackingpatching.com/) 推荐下载IDM，下东西比迅雷快
+*   [落尘之木](https://www.luochenzhimu.com/) 作者维护着去广告版的迅雷
+*   [吾爱破解](https://www.52pojie.cn/) 比较著名的站点了，不定期开放注册，有时能找到不错的资料或视频教程。
+*   [PHP / Laravel 月刊](https://learnku.com/issues)
+*   [https://smee.io/](https://smee.io/) 提供代理webhook请求并发送到本地，一般调试程序会用到
+*   [SaaS微服务十二要素应用宣言](https://12factor.net/zh_cn/)
+    参考：[https://www.jianshu.com/p/bbdccd020a1d](https://www.jianshu.com/p/bbdccd020a1d)
+
+分享一个Skype彩蛋：在发过言的聊天窗口快速点击7次以上会出现一个会跳舞的猴子。具体哪个版本加上的未知。
+
+想流畅观看youbute等国外网站的话。
+有个比较好的做法是买个国外的vps，然后安装ssr。关于安装流程，非常简单有一键安装脚本。
+可以去这买，[搬瓦工](http://banwagong.cn/)。很便宜，只想做代理的话不用买配置很高的。
+如果不想掏钱可以买 谷歌云 Google Cloud Platform。前提是有国际信用卡和google账号。
+具体流程参见：[isomeonegc](http://isomeonegc.blogspot.com/)，需要过墙才能打开。
+全局富强软件: [https://getoutline.org/en/home](https://getoutline.org/en/home)
+教程： [https://cyhour.com/697/](https://cyhour.com/697/)
+[Dler Cloud 同事在用的科学上网](https://dlercloud.org/index.html)
+工具
+[https://getoutline.org/en/home](https://getoutline.org/en/home)
+教程：
+[https://free.com.tw/google-outline/](https://free.com.tw/google-outline/)
+
+[前端面试之道](https://yuchengkai.cn/docs/frontend/#new)
+
+[牛客网](https://www.nowcoder.com/)
+收集各IT大厂的笔试面试题，没事做做上面的题全面提升IT编程能力
+
+
+[sourcegraph](https://about.sourcegraph.com/)
+装了chrome扩展之后，比如在github上分析源码的好伙伴。提供定义跳转，引用及搜索等功能。
+
+> ![image.png](https://hexo-blog.pek3b.qingstor.com/upload_images/71414-7b7c5f8bec5c6727.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+[bearychat](https://bearychat.com/) 
+可以看成是国产简化版的slack吧
+
+> ![image.png](https://hexo-blog.pek3b.qingstor.com/upload_images/71414-3300178cbdce938b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+[SSL/TLS安全评估报告](https://myssl.com/) 
+评估网站的ssl安全程度
+
+> ![image.png](https://hexo-blog.pek3b.qingstor.com/upload_images/71414-156eb8b63e3053d1.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
