--- a/docs/Gitlab/父子流水线.md
+++ b/docs/Gitlab/父子流水线.md
@@ -26,7 +26,6 @@ download_upstream_artifacts:
   #   CI_DEBUG_TRACE: "true"
   stage: downstream_job
   # download upstream pipeline artifacts:
-  # https://gitlab.prod.devops.dps.kone.cn/help/ci/pipelines/downstream_pipelines.md#fetch-artifacts-from-an-upstream-pipeline  
   needs:
     - pipeline: $PARENT_PIPELINE_ID
       job: create_artifacts
@@ -35,11 +34,11 @@ download_upstream_artifacts:
     - if: $CI_PIPELINE_SOURCE == "pipeline"
   script:
     - git config --global user.name "gitlab-ci"
-    - git config --global user.email "gitlab-ci@kone.com"
+    - git config --global user.email "gitlab-ci@mafeifan.com"
     - git config --global --add safe.directory "*"
     - mkdir -p ~/.ssh && chmod 700 ~/.ssh
     - ssh-keyscan ${CI_SERVER_HOST} >> ~/.ssh/known_hosts && chmod 644 ~/.ssh/known_hosts
-    - cat "$SSH_PRIVATE_KEY" >  ~/.ssh/kone_gitlab && chmod 500 ~/.ssh/kone_gitlab
+    - cat "$SSH_PRIVATE_KEY" >  ~/.ssh/gitlab && chmod 500 ~/.ssh/gitlab
     - cat "$SSH_CONFIG" >  ~/.ssh/config
 
     - echo "下载 all_modules 流水线生成 so 文件"
