--- a/docs/Tools/优质免费软件推荐.md
+++ b/docs/Tools/优质免费软件推荐.md
@@ -4,23 +4,24 @@
 
 ### Cyberduck
 
-文件查看器 FTP, SFTP, WebDAV, Amazon S3, OpenStack Swift, Backblaze B2, Microsoft Azure & OneDrive, Google Drive and Dropbox.
+文件查看器 支持 FTP, SFTP, WebDAV, Amazon S3, OpenStack Swift, Backblaze B2, Microsoft Azure & OneDrive, Google Drive and Dropbox.
 
 https://cyberduck.io/download/
 
-### Ossbrowser
+### OSSBrowser
 
 专门查看阿里云OSS文件
 
 https://help.aliyun.com/zh/oss/developer-reference/use-ossbrowser
 
 ### PicGo
-上传文件到图床
+上传文件公有云对象存储服务，做为图床，我这个网站的图片都是存在了青云对象存储
 
 https://github.com/Molunerfinn/PicGo
 
-### localsend
+### LocalSend
 AirDrop的开源跨平台替代品
+如果你同时有安卓，苹果手机，平板等设备，需要同一局域网内相互传文件，可以使用这个软件
 
 https://github.com/localsend/localsend
 
