--- a/docs/Tools/优质免费软件推荐.md
+++ b/docs/Tools/优质免费软件推荐.md
@@ -1,6 +1,37 @@
 推荐一些个人在使用的免费软件
 
-### 文件
+
+## Mac
+
+### Raycast：
+https://raycast.com
+
+直接替代掉原生的 Spotlight 搜索
+
+### OrbStack：
+https://orbstack.dev 
+
+替换掉Docker 原生的应用，这个速度比亲儿子强太多了
+
+### Warp：
+https://warp.dev
+很现代的一个 terminal，iterm2的替代品
+
+### Kap
+https://getkap.co/
+录制视频和 gif 的轻量工具
+
+### linear
+https://linear.app/
+
+项目管理
+
+### Trello
+https://trello.com/
+
+项目管理
+
+## 文件
 
 ### Cyberduck
 
@@ -25,10 +56,9 @@ AirDrop的开源跨平台替代品
 
 https://github.com/localsend/localsend
 
-
 ## 安全
 
-### bitwarden
-密码管理器
+### Bitwarden
+密码管理器, 支持多设备之间互相同步
 
 https://bitwarden.com/download
