--- a/docs/Gitlab/父子流水线.md
+++ b/docs/Gitlab/父子流水线.md
@@ -1,3 +1,10 @@
+## demo1 将父流水线的 artifacts 传递给子流水线
+
+
+### 关于 token
+
+![](https://pek3b.qingstor.com/hexo-blog/202407011621473.png)
+
 project1
 
 ```yaml
@@ -46,11 +53,12 @@ download_upstream_artifacts:
     - echo $PARENT_JOB_ID
     # 下载 artifacts
     # 会产生问题，因为 project1的流水线是先触发downstream才上传artifacts,这个时候取不到artifacts
+    # 解决方法：使用外部OSS，不使用 artifact
     - curl --location --output artifacts.zip "${CI_SERVER_HOST}/api/v4/projects/${PARENT_PROJECT_ID}/jobs/${PARENT_JOB_ID}/artifacts?job_token=$CI_JOB_TOKEN"
     - unzip -o artifacts.zip
 ```
 
-### 优化，支持传递artifacts
+## 优化，支持传递 artifacts
 
 project1
 
